# SummerPercentBot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  __main__.py
app/database/: __init__.py  models.py  users.py
app/handlers/: __init__.py  percent.py  start.py  toggle.py
app/middlewares/: __init__.py  database.py  throttling.py
app/utils/: __init__.py  daily.py
