[project]
name = "summerpercentsbot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiocron>=2.1",
    "aiogram>=3.20.0.post0",
    "aiosqlite>=0.21.0",
    "cachetools>=6.1.0",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.41",
]
readme = "README.md"